{
    "name": "Controls",
    "maps": [
        {
            "name": "InGame",
            "id": "7ef59f27-e8fe-4ccc-95a1-da6af83379c6",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "ecfddadf-9eeb-4b19-9148-acb7f535180a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "db536ccc-303c-45f3-970e-2ab92b4a1ebc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "66075ef4-bdf6-4f94-b0b3-20432301f242",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "8d6a5abb-f151-4e79-aa8d-c98f04315f48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "80e2725f-cf4a-4c7b-885d-2c96419340a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "120d986a-046e-45f9-a4d7-65811b499244",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03c9eaf1-ec07-4742-9b06-b28a5dded87b",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb775299-2e98-4d73-9222-21b4fa56e155",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "268e095f-e5a0-46ee-b113-91e160ec3499",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2686f7a1-170f-4976-9b26-9afa09c036da",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4460292f-c530-4412-aab4-2dddecc9a055",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f64cdb0-21e1-427a-9421-4ebadeff5587",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7c8cc37-7399-45d6-8038-208d5d9580b6",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6dc0d4d-a12d-4d1f-b644-a7a59bd13a99",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7beef8b-1985-4cee-9b2f-f6078066d98d",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Carousel",
            "id": "7f024c6b-7822-46bc-a680-4de523ff69d9",
            "actions": [
                {
                    "name": "CycleLeft",
                    "type": "Button",
                    "id": "d9d8092b-e5d4-4bea-9c7c-0ec44593a038",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CycleRight",
                    "type": "Button",
                    "id": "2bcf6159-33bb-4133-a10c-53e26dc8c79f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "fbbb9707-70e0-400a-8b39-47ee1d0a1e7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "71707eb0-91bb-4fd1-9fd3-29d404f101e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "16262a64-b725-4227-86c6-07720fac3eb2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d44a43ba-db00-455e-a3d1-3e1dae6fa640",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "544348e4-e022-45a7-b86c-1cc79292505c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca709d7a-5b71-44b5-9bbe-d63655823f13",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39eae3c0-8e9c-4c06-b503-3812a2f7dc16",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e8e496c-978c-4835-85cc-b66185877705",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}